# piutil

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
examples/: data_loader_demo.py
src/piutil/: __init__.py  benchmark.py  norm_stats.py  timer.py
src/piutil/data/: __init__.py  decode.py  loader.py  shard_writer.py  torch_loader.py
src/piutil/profiling/: __init__.py  benchmark.py  timer.py
tests/: test_benchmark.py  test_timer.py
